--- a/README.rdoc
+++ b/README.rdoc
@@ -3,6 +3,7 @@
 Coder Manual Project Application
 Subscription-based web application
 http://codermanual.com
+Just an experiment
 
 Things you may want to cover:
 
